# yaqn

./: .gitignore  README.md  pyproject.toml
assets/karabiner-rules/: open-yaqn.json
src/: .gitignore
src/yaqn/: args.py  config.py  gui.py  main.py
src/yaqn/config/yaqn/: config.toml
tests/: __init__.py  test.py
