[tool.poetry]
name = "yaqn"
version = "0.1.0"
description = "A markdown quicknote app made in python and gtk."
authors = ["kutu-dev"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
customtkinter = "^4.6.3"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
